		-[Core] Added ContainerOptions.DefaultLifestyle property to make it easier to override the default
		 (transient) lifestyle. (fixes #313)
		-[Core] Improved error message in case a registration couldn't be resolved caused by incorrect
		 dynamic assembly loading. (fixes #325)
		-[LifetimeScoping] Marked RegisterLifetimeScope and GetCurrentLifetimeScope obsolete. (fixes #303)
		-[WCF] Marked RegisterPerWcfOperation and GetCurrentWcfOperationScope obsolete. (fixes #303)
		-[Web] Marked RegisterPerWebRequest obsolete. (fixes #303)
		-[WebApi] Marked RegisterWebApiRequest obsolete. (fixes #303)


Version 3.2.7 (v3.2.7 RTM) 2016-11-03

	Bug fixes:
		-[Core] Fixes a bug introduced in 3.2.5 that cause a stackoverflow in the cyclic dependency 
		 mechanism (ohh the irony).


Version 3.2.5 (v3.2.5 RTM) 2016-11-01

	Bug fixes:
		-[Core] Concurrency bug when resolving a decorated instance (CyclicDependencyException is thrown) in
		 case multiple container instances where used. (fixes #323)


Version 3.2.4 (v3.2.4 RTM) 2016-10-26

	Bug fixes:
		-[Core] Misleading exception fixed that was thrown after the container got disposed. (fixes #322)


Version 3.2.3 (v3.2.3 RTM) 2016-10-16

	Bug fixes:
		-[Core] Resolving generic type with type argument that maps to multiple concrete types of other type
		 argument failed. (fixes #316)


Version 3.2.2 (v3.2.2 RTM) 2016-08-26

	Bug fixes:
		-[Core] core library is now compatible with .NETStandard 1.0 which allows it to run with 
		 Xamarin.Android and MonoDroid. (fixes #262 and #263)
		-[Core] Working with IReadOnlyCollection and IReadOnlyList failed with the .NET Core and .NETStandard 
		 compatible version. (fixes #289)
		-[LifetimeScoping] Library is now compatible with .NETStandard 1.0.
		-[ExecutionContextScoping] Library is now compatible with .NETStandard 1.3.


Version 3.2.0 (v3.2.0 RTM) 2016-06-28

	Improvements/Changes:
		-[WCF] WCF services can now be resolved as interfaces by specifying them in the Service attribute