@@ -1,7 +1,7 @@
 ﻿#region Copyright Simple Injector Contributors
 /* The Simple Injector is an easy-to-use Inversion of Control library for .NET
  * 
- * Copyright (c) 2013 Simple Injector Contributors
+ * Copyright (c) 2013-2016 Simple Injector Contributors
  * 
  * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and 
  * associated documentation files (the "Software"), to deal in the Software without restriction, including 
@@ -28,15 +28,15 @@ namespace SimpleInjector.Integration.WebApi
     /// <summary>
     /// Defines a lifestyle that caches instances during the execution of a single ASP.NET Web API Request.
     /// Unless explicitly stated otherwise, instances created by this lifestyle will be disposed at the end
-    /// of the Web API request. Do note that this lifestyle requires the <see cref="SimpleInjectorWebApiDependencyResolver"/>
-    /// to be registered in the Web API configuration.
+    /// of the Web API request. Do note that this lifestyle requires the 
+    /// <see cref="SimpleInjectorWebApiDependencyResolver"/> to be registered in the Web API configuration.
     /// </summary>
     /// <example>
     /// The following example shows the usage of the <b>WebApiRequestLifestyle</b> class:
     /// <code lang="cs"><![CDATA[
     /// var container = new Container();
-    /// 
-    /// container.Register<IUnitOfWork, EntityFrameworkUnitOfWork>(new WebApiRequestLifestyle());
+    /// container.Options.DefaultScopedLifestyle = new WebApiRequestLifestyle();
+    /// container.Register<IUnitOfWork, EntityFrameworkUnitOfWork>(Lifestyle.Scoped);
     /// ]]></code>
     /// </example>
     public sealed class WebApiRequestLifestyle : ExecutionContextScopeLifestyle
@@ -45,8 +45,7 @@ namespace SimpleInjector.Integration.WebApi
         /// The created and cached instance will be disposed when the Web API request ends, and when the 
         /// created object implements <see cref="IDisposable"/>.
         /// </summary>
-        public WebApiRequestLifestyle()
-            : this(disposeInstanceWhenScopeEnds: true)
+        public WebApiRequestLifestyle() : base("Web API Request")
         {
         }
 
@@ -55,9 +54,14 @@ namespace SimpleInjector.Integration.WebApi
         /// Specifies whether the created and cached instance will be disposed when the Web API request ends,
         /// and when the created object implements <see cref="IDisposable"/>. 
         /// </param>
+#pragma warning disable 0618
+        [Obsolete("This constructor overload has been deprecated and will be removed in a future release. " +
+            "Please use WebApiRequestLifestyle() instead.",
+            error: false)]
         public WebApiRequestLifestyle(bool disposeInstanceWhenScopeEnds)
             : base("Web API Request", disposeInstanceWhenScopeEnds)
         {
         }
+#pragma warning restore 0618
     }
 }
